--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#B6B3B3</color>
+    <color name="cyan">#7DEDFF</color>
+    <color name="dark_cyan">#3EDBF0</color>
+    <color name="dark_blue">#5598b1</color>
 </resources>
